--- a/frontend/src/features/team/components/Member.module.css
+++ b/frontend/src/features/team/components/Member.module.css
@@ -20,7 +20,7 @@
 }
 
 .text {
-    font-weight: 600;
+  font-weight: 600;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 100%;
@@ -30,5 +30,10 @@
   position: absolute;
   top: 0;
   right: 0;
-  
+}
+
+.skeleton {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
