--- a/frontend/src/features/topics/pages/Topic.module.css
+++ b/frontend/src/features/topics/pages/Topic.module.css
@@ -1,7 +1,3 @@
-
-
-
-
 .mainContent {
   /* max-width: 960px; */
   /* margin: 0 auto; */
@@ -29,16 +25,66 @@
 .empty {
   width: 100%;
   height: 200px;
-  margin-top: 120px
- 
+  margin-top: 120px;
 }
 .empty img {
   height: 250px;
   width: 250px;
 }
-.postsWrapepr {
+.postsWrapper {
   display: flex;
   flex-direction: column;
   gap: var(--size-12);
   padding: var(--size-12 --size-12);
+  width: 100%;
+}
+
+
+.timeline {
+  display: flex;
+  position: relative;
+}
+
+.timeline::before {
+  content: "";
+  display: block;
+  width: 3px;
+  background-color: var(--color-primary);
+  opacity: 0.4;
+  position: absolute;
+  top:0;
+  left: 178px;
+  height: 100%;
+
+}
+  
+.postWrapper {
+   display: flex;
+   
+  
+}
+.postWrapper:not(:first-child) {
+  margin-top: var(--size-32);
+}
+.circle {
+  height: 20px;
+  width: 20px;
+  background-color: var(--color-primary);
+  position: relative;
+  left: -11px;
+  top: var(--size-16);
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+.postedOn {
+  width: 180px;
+  text-align: center;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  flex-shrink: 0;
+}
+
+.postedAt {
+  font-weight: bold;
+  display: block;
 }
