--- a/frontend/src/features/team/components/Member.module.css
+++ b/frontend/src/features/team/components/Member.module.css
@@ -37,3 +37,18 @@
   flex-direction: column;
   align-items: center;
 }
+
+.skeletonContainer {
+  padding: var(--size-12) var(--size-16);
+  display: flex;
+  gap: var(--size-12);
+}
+.skeleton {
+  flex-grow: 1;
+}
+
+.circleSkeleton {
+  width: 40px;
+  height: 40px;
+}
+
