--- a/frontend/src/components/Layout/Sidebar.module.css
+++ b/frontend/src/components/Layout/Sidebar.module.css
@@ -33,9 +33,15 @@
 }
 
 .bottomMenu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: auto;
-    gap: var(--size-24)
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: auto;
+  gap: var(--size-24);
+}
+
+@media (min-width: 1200px) {
+  .menuItem {
+    display: none;
+  }
 }
