--- a/frontend/src/components/Layout/Section/Section.module.css
+++ b/frontend/src/components/Layout/Section/Section.module.css
@@ -1,4 +1,5 @@
 .section {
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   padding: var(--size-16);
@@ -17,4 +18,31 @@
 }
 .sectionFooter {
   z-index: 1;
+}
+
+
+
+@media (max-width: 1200px) {
+  .sidesection {
+    overflow: hidden;
+    position: absolute;
+    z-index: 2;
+    left: var(--width-sidebar);
+    top: 0;
+    height: 100%;
+    overflow: hidden;
+    background-color: var(--color-main-background);
+    transition: width 0.5s, padding 0.2s;
+  }
+
+  .sidesection.hide {
+    width: 0 !important;
+    padding: 0;
+  }
+}
+
+@media (max-width: 450px) {
+  .sidesection.fitContent {
+    max-width: fit-content;
+  }
 }
