--- a/frontend/src/features/topics/components/Post/Post.module.css
+++ b/frontend/src/features/topics/components/Post/Post.module.css
@@ -17,8 +17,7 @@
 .post {
   border-left: 5px solid var(--color-primary);
   max-width: var(--size-768);
-  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.1)²;
-  
+  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.1) ²;
 }
 .postInfo {
   display: flex;
@@ -45,7 +44,10 @@
   display: flex;
   gap: var(--size-12);
 }
-
+.reaction > button {
+  flex: 1;
+  font-size: large;
+}
 .avatar {
   width: var(--size-48);
   height: var(--size-48);
@@ -53,4 +55,39 @@
 
 .ghostButton {
   padding: 0.25rem;
+}
+.header {
+  display: flex;
+  align-items: center;
+  gap: var(--size-4);
+}
+.openButton {
+  margin-left: auto;
+}
+
+div.modal {
+  max-width: none;
+  width: 90vw;
+  margin-top: 5vh;
+}
+
+.modalContent {
+  max-height: 80vh;
+  overflow: auto;
+}
+
+@media (max-width: 600px) {
+  div.modal {
+    display: flex;
+    flex-direction: column;
+    max-width: none;
+    width: 100vw;
+    height: 100vh;
+    margin-top: 0vh;
+  }
+  .modalContent {
+    padding: 0;
+    max-height: fit-content;
+    
+  }
 }
