--- a/frontend/src/components/Layout/Sidebar.module.css
+++ b/frontend/src/components/Layout/Sidebar.module.css
@@ -1,4 +1,5 @@
 .sidebar {
+  z-index: 3;
   width: var(--width-sidebar);
   background-color: var(--color-background-sidebar);
   height: 100%;
@@ -40,8 +41,35 @@
   gap: var(--size-24);
 }
 
+.menuItem {
+  cursor: pointer;
+}
+
 @media (min-width: 1200px) {
   .menuItem {
     display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .sidebar {
+    z-index: 3;
+    background-color: var(--color-background-sidebar);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: var(--size-54);
+    padding: var(--size-12);
+  }
+  .sidebar nav ul {
+    display: flex;
+  }
+  .bottomMenu {
+    flex-direction: row;
+    margin-top: 0;
+  }
+  .navLink {
+    margin-bottom: 0;
   }
 }
