--- a/frontend/src/features/chat/components/Messages.module.css
+++ b/frontend/src/features/chat/components/Messages.module.css
@@ -1,3 +1,13 @@
 .section {
   width: var(--size-384);
 }
+.navLink {
+  display: flex;
+  align-items: center;
+  gap: var(--size-12);
+}
+
+.avatar {
+   height: 45px;
+   width: 45px;
+}
